--- a/public/Css/style_index.scss
+++ b/public/Css/style_index.scss
@@ -3,33 +3,34 @@ $dark: #3a3838;
 $blancoRoto: #f7ede5;
 
 /* Colores del cuerpo */
-body{
-   background: $blancoRoto;
-   transition: .3s ease all;
-   &.dark { /* modo oscuro */
-       background: $dark;
-   }
-
+body {
+    background: $blancoRoto;
+    transition: 0.3s ease all;
+    &.dark {
+        /* modo oscuro */
+        background: $dark;
+    }
 }
 
 /* Titulo H1 de la página*/
-h1{
-    body.dark & { /* modo oscuro */
+h1 {
+    body.dark & {
+        /* modo oscuro */
         color: $blancoRoto;
     }
-
-   }
+}
 /*enlaces*/
-nav{
-    transition:  .3s ease all;
-    a{
+nav {
+    transition: 0.3s ease all;
+    a {
         color: $dark;
         text-decoration: none;
     }
-    body.dark &{ 
-        a{ /* modo oscuro */
+    body.dark & {
+        a {
+            /* modo oscuro */
             color: $blancoRoto;
-            &:hover{
+            &:hover {
                 color: $blancoRoto;
             }
         }
@@ -45,34 +46,38 @@ nav{
     cursor: pointer;
     display: flex;
     outline: none;
-    &::after{
+    &::after {
         content: "";
         display: block;
         width: 30px;
         height: 30px;
         position: absolute;
-        background: #F1F1F1;
-        top:0;
-        left:0; /* Para cuando cambiemos la posición del boton*/
+        background: #f1f1f1;
+        top: 0;
+        left: 0; /* Para cuando cambiemos la posición del boton*/
         right: unset; /* Para cuando cambiemos la posición del boton*/
         border-radius: 100px;
-        transition: .3s ease all;
-        box-shadow: 0px 0px 2px 2px rgba(0,0,0,.2);
+        transition: 0.3s ease all;
+        box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
     }
-    &.active{
+    &.active {
         background: orange;
         color: black;
-        &::after{
-           right: 0;
-           left: unset;
+        &::after {
+            right: 0;
+            left: unset;
         }
     }
-    span{
-       width: 30px;
-       height: 30px;
-       line-height: 30px;
-       display: block;
-       background: none;
-       color: #fff; 
+    span {
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        display: block;
+        background: none;
+        color: #fff;
     }
+}
+
+.escondido {
+    display: none;
 }
