--- a/public/Css/style_index.scss
+++ b/public/Css/style_index.scss
@@ -1,14 +1,38 @@
-// Variables de color
+// ==================================================================
+//                         Variables de color
 $dark: #3a3838;
 $blancoRoto: #f7ede5;
+$totalmenteBlanco: #fff;
+$azulOscuro: #343d5b;
+$negroTransparente: rgba(0, 0, 0, 0.2);
+$naranja: #ffa500;
+$totalmenteNegro: #000000;
+$blancoSwitch: #f1f1f1;
+$whatsapp: #92d36e;
+// ==================================================================
 
 /* Colores del cuerpo */
 body {
     background: $blancoRoto;
     transition: 0.3s ease all;
+    background: url(../img/fondoClaro.png) no-repeat;
+    width: 90%;
+    height: 100%;
+
     &.dark {
         /* modo oscuro */
-        background: $dark;
+        background-color: $dark;
+        //background: url(../img/fondoOscuro.png) no-repeat;
+        width: 90%;
+        height: 100%;
+    }
+    .fa-whatsapp {
+        color: $whatsapp;
+        font-size: 30px;
+    }
+    .fa-key {
+        color: $blancoSwitch;
+        font-size: 30px;
     }
 }
 
@@ -39,7 +63,7 @@ nav {
 
 /* estilos de boton Claro / Oscuro */
 .switch {
-    background: #343d5b;
+    background: $azulOscuro;
     border-radius: 1000px;
     border: none;
     position: relative;
@@ -52,17 +76,17 @@ nav {
         width: 30px;
         height: 30px;
         position: absolute;
-        background: #f1f1f1;
+        background: $blancoSwitch;
         top: 0;
         left: 0; /* Para cuando cambiemos la posición del boton*/
         right: unset; /* Para cuando cambiemos la posición del boton*/
         border-radius: 100px;
         transition: 0.3s ease all;
-        box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 0px 2px 2px $negroTransparente;
     }
     &.active {
-        background: orange;
-        color: black;
+        background: $naranja;
+        color: $totalmenteNegro;
         &::after {
             right: 0;
             left: unset;
@@ -74,7 +98,7 @@ nav {
         line-height: 30px;
         display: block;
         background: none;
-        color: #fff;
+        color: $totalmenteBlanco;
     }
 }
 
