administracion backend terminada

--- a/public/Css/textStyle.scss
+++ b/public/Css/textStyle.scss
@@ -1,11 +1,18 @@
 .module {
-  width: 250px;
   margin: 0 0 1em 0;
   overflow: hidden;
 }
 
 .line-clamp {
   display: -webkit-box;
-  -webkit-line-clamp: 4;
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
+}
+
+.img_resize{
+  p  {
+   img{
+     width: 50%;
+   }
+  }
 }
