--- a/public/Css/textStyle.css
+++ b/public/Css/textStyle.css
@@ -1,12 +1,15 @@
 .module {
-  width: 250px;
   margin: 0 0 1em 0;
   overflow: hidden;
 }
 
 .line-clamp {
   display: -webkit-box;
-  -webkit-line-clamp: 4;
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
+}
+
+.img_resize p img {
+  width: 50%;
 }
 /*# sourceMappingURL=textStyle.css.map */
