--- a/public/Css/textStyle.css
+++ b/public/Css/textStyle.css
@@ -1,15 +1,23 @@
 .module {
+  width: 20em;
   margin: 0 0 1em 0;
   overflow: hidden;
 }
 
 .line-clamp {
   display: -webkit-box;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
 .img_resize p img {
   width: 50%;
+}
+
+@media (min-width: 1025px) {
+  .img-fluid {
+    max-width: 50%;
+    height: auto;
+  }
 }
 /*# sourceMappingURL=textStyle.css.map */
