--- a/public/Css/textStyle.scss
+++ b/public/Css/textStyle.scss
@@ -1,11 +1,12 @@
 .module {
+  width: 20em;
   margin: 0 0 1em 0;
   overflow: hidden;
 }
 
 .line-clamp {
   display: -webkit-box;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
@@ -14,5 +15,13 @@
    img{
      width: 50%;
    }
+  }
+}
+
+@media (min-width: 1025px) {
+  
+  .img-fluid {
+    max-width: 50%;
+    height: auto;
   }
 }
