--- a/public/Css/style_index.css
+++ b/public/Css/style_index.css
@@ -1,12 +1,16 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Allerta&display=swap");
 /* Colores del cuerpo */
 body {
   background: #f7ede5;
   -webkit-transition: 0.3s ease all;
   transition: 0.3s ease all;
-  background: url(../img/fondoClaro.png) no-repeat;
+  margin: auto !important;
   width: 90%;
   height: 100%;
+  overflow-x: hidden;
+  /*enlaces*/
+  /* estilos de boton Claro / Oscuro */
 }
 
 body.dark {
@@ -16,44 +20,100 @@ body.dark {
   height: 100%;
 }
 
+body.dark p,
+body.dark h1,
+body.dark h2,
+body.dark h3,
+body.dark h4,
+body.dark h5,
+body.dark h6 {
+  color: #f7ede5;
+}
+
 body .fa-whatsapp {
   color: #92d36e;
-  font-size: 30px;
+  font-size: 28px;
 }
 
 body .fa-key {
   color: #f1f1f1;
-  font-size: 30px;
+  font-size: 16px;
 }
 
-/* Titulo H1 de la página*/
-body.dark h1 {
-  /* modo oscuro */
+body header .container {
+  z-index: 999;
+  padding-left: unset;
+  padding-right: unset;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+body header .container svg {
+  width: 100%;
+}
+
+body header .container #logo {
+  width: 30%;
+  position: fixed;
+  padding-left: 3%;
+  padding-top: 2%;
+}
+
+body header .container .row {
+  padding-left: 123px;
+  padding-top: 3%;
+}
+
+body header .container .row .botonesHead {
+  padding-left: 10px;
+}
+
+body header .container .row .botonesHead a {
+  font-family: "Allerta", sans-serif;
   color: #f7ede5;
+  text-decoration: none;
+  text-transform: capitalize;
 }
 
-/*enlaces*/
-nav {
+body main {
+  margin: 9rem 0;
+  /* Titulos de la página*/
+}
+
+body main p {
+  margin: 3rem;
+}
+
+body main h1,
+body main h2,
+body main h3,
+body main h4,
+body main h5,
+body main h6 {
+  text-align: center;
+}
+
+body nav {
   -webkit-transition: 0.3s ease all;
   transition: 0.3s ease all;
 }
 
-nav a {
+body nav a {
   color: #3a3838;
   text-decoration: none;
 }
 
-body.dark nav a {
+body.dark body nav a {
   /* modo oscuro */
   color: #f7ede5;
 }
 
-body.dark nav a:hover {
+body.dark body nav a:hover {
   color: #f7ede5;
 }
 
-/* estilos de boton Claro / Oscuro */
-.switch {
+body .switch {
   background: #343d5b;
   border-radius: 1000px;
   border: none;
@@ -65,7 +125,7 @@ body.dark nav a:hover {
   outline: none;
 }
 
-.switch::after {
+body .switch::after {
   content: "";
   display: block;
   width: 30px;
@@ -84,26 +144,26 @@ body.dark nav a:hover {
           box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-.switch.active {
+body .switch.active {
   background: #ffa500;
   color: #000000;
 }
 
-.switch.active::after {
+body .switch.active::after {
   right: 0;
   left: unset;
 }
 
-.switch span {
-  width: 30px;
-  height: 30px;
+body .switch span {
+  width: 23px;
+  height: 29px;
   line-height: 30px;
   display: block;
   background: none;
   color: #fff;
 }
 
-.escondido {
+body .escondido {
   display: none;
 }
 /*# sourceMappingURL=style_index.css.map */
