--- a/public/Css/navbar.scss
+++ b/public/Css/navbar.scss
@@ -8,7 +8,7 @@ $blanco: rgb(255, 255, 255);
     width: 100%;
     position: fixed;
     bottom: 0;
-    margin-bottom: 4rem;
+    margin-bottom: 3.2rem;
     display: flex;
     flex-flow: column nowrap;
     background-color: $negroTransparente;
@@ -63,4 +63,19 @@ $blanco: rgb(255, 255, 255);
 }
 .menu-open {
     display: block;
+}
+
+#up{
+    right: 0;
+    width: 10%;
+    height: 5%;
+    font-size: xx-large;
+    padding-right: 16%;
+    position: fixed;
+    bottom: 2%;
+    display: flex;
+    z-index: 999;
+    justify-content:end;
+    align-items:flex-end;
+    color: rgb(0, 0, 0);
 }
