--- a/public/Css/style_index.css
+++ b/public/Css/style_index.css
@@ -131,6 +131,15 @@ body main h4 {
   color: #f7ede5;
 }
 
+body main #wgs_widget_51_1403353076147 {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 body main #wgs_widget_51_1403353076147 #wgs-curr #wgs-datetime {
   color: #000000;
 }
@@ -167,6 +176,10 @@ body main #maps {
   width: 100%;
   height: 350px;
   border: 0;
+}
+
+body main #cal {
+  height: 300px;
 }
 
 body footer #nav-mobile a {
@@ -269,11 +282,6 @@ body .escondido {
   body main {
     margin: 8rem 0;
   }
-  body main #wgs_widget_51_1403353076147 {
-    display: block;
-    margin-left: 0;
-    margin-right: 0;
-  }
   body main .webcam #webcam-visor {
     padding-bottom: 58%;
   }
@@ -286,6 +294,9 @@ body .escondido {
     margin-right: auto;
   }
   body main #maps {
+    height: 450px;
+  }
+  body main #cal {
     height: 450px;
   }
 }
@@ -303,6 +314,9 @@ body .escondido {
     padding-left: 79%;
     padding-top: 1%;
   }
+  body main {
+    margin: 9rem 0;
+  }
   body main .webcam #webcam-visor {
     padding-bottom: unset;
   }
@@ -317,6 +331,9 @@ body .escondido {
   }
   body main #meteo {
     padding-left: 50%;
+  }
+  body main #cal {
+    height: 100%;
   }
 }
 /*# sourceMappingURL=style_index.css.map */
